styles.css
/* ... */
.music-heading {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    color: #ffffff;
    text-align: center;
    background-color: #7d7365;
    padding: 0.25em 0.75em;
    width: 100%;
    border-radius: 0.62vw;
    margin-top: 0%;
}
.hobby-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #d5c6b3;
    border-radius: 0.94vw;
    width: 40%;
    max-width: 45vw;
    flex: 1 1 35%;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
    height: auto;
}


.hobby-heading {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    color: #ffffff;
    text-align: center;
    background-color: #7d7365;
    padding: 0.25em 0.75em;
    border-radius: 0.62vw;
    margin-top: 0%;
}
.hobby-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0;
}
.hobby-list li {
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    font-weight: bold;
    color: #49433b;
    margin: 0.31vw 0;
}

.music-and-hobbies{
    display: flex;
    align-items: stretch;
    justify-content: center;
    gap: 1.25vw;
    margin: 2.5vw auto;
    width: 100%;
}

.contact-info {
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    color: #ffffff;
    background-color: #7d8d6b;
    padding: 5%;
    border-radius: 12%;
    width: 30vw;
    max-width: 90%;
    text-align: center;
}


.contact-link {
    border: 2px solid #49433b;
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    color: #ffffff;
    background-color: #7d7365;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    text-decoration: none;
    display: inline-block;
    margin-top: 0.62vw;
    &:hover {
        background-color: #49433b;
    }
}

.profile-image {
    width: 100%;
    max-width: 90%;
    max-height: 300px;
    object-fit: cover;
    height: auto;
    border-radius: 12%;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
    margin-bottom: 1.25vw;
}

.contact-skills-section {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    gap: 2%;
    margin: 2%;
    max-width: 90%;
    list-style: none;
}


/*
*
* 
Projects Page CSS 
*
*
*/

.project-links {
    display: flex;
    flex-direction: row;
    gap: 0.62vw;
    list-style: none;
    background: none;
    margin: 1.5vw;
    justify-content: space-evenly;
    padding: 0;

}

.project-link {
    color: #ffffff;
    background-color: #7d7365;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(0.8rem, calc(1px + 0.85vw), 1.25rem);
    text-align: center;
    text-decoration: none;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
}

.project-items {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.25vw;
    list-style: none;
    padding: 0;
    margin: 0 2.5%;
}

.project-item {
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.8rem, calc(1px + 0.85vw), 1.25rem);
    color: #ffffff;
    background-color: #7d8d6b;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    margin-bottom: 0.62vw;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
}

.project-title {
    font-size: clamp(1rem, calc(1px + 1.12vw), 1.6rem);
    font-weight: bold;

}

.project-categories {
    margin-top: 10%;
    margin-bottom: 2%;
    display: flex;
    gap: 2.5vw;
    list-style: none;
    padding: 0.62vw;
    margin-left: 5%;
    margin-right: 5%;
}

.project-categories li {
    align-items: center;
    background-color: #7d8d6b;
    border-radius: 0.62vw;
    padding: 1.25vw;
    width: 50%;
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.8rem, calc(1px + 0.85vw), 1.25rem);
    color: #ffffff;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
}
.project-categories li:hover {
    transform: scale(1.1);
    transition: transform 0.2s ease;
}

.cycle-button {
    background-color: #7d7365;
    color: #ffffff;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(0.8rem, calc(1px + 0.85vw), 1.25rem);
    text-align: center;
    margin: 1.25vw;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
}


.projects-h1 {
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(1.25rem, calc(1px + 1.59vw), 2.25rem);
    color: #ffffff;
    text-align: left;
    background-color: #49433b;
    padding: 0.25em 0.75em;
    border-radius: 0.62vw;
    margin-bottom: 1.25vw;
}

.project-category-description {
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(0.95rem, calc(1px + 1.06vw), 1.5rem);
    color: #ffffff;
    background-color: #7d8d6b;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    margin-bottom: 0%;
    margin-top: 2%;
    margin-left: 10%;
    margin-right: 10%;
    text-align: center;
}

.all-buttons {
    display: flex;
    align-items: center;
    padding: 1.25vw;
    gap: 1.25vw;
}

.back-button-container {
    margin-left: auto;
    margin-right: 1.5%;
}

.back-button {
    background-color: #49433b;
    color: #ffffff;
    padding: 0.62vw 1.25vw;
    border-radius: 0.62vw;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: clamp(0.8rem, calc(1px + 0.85vw), 1.25rem);
    display: inline-block;
    cursor: pointer;
    box-shadow: 0 0.31vw 0.62vw rgba(0, 0, 0, 0.5);
}
/* ... */

